updates to travis.yml to try to include coverage testing
added travis ci badge

--- a/inst/sandbox.Rmd
+++ b/inst/sandbox.Rmd
@@ -9,6 +9,8 @@ output:
     df_print: paged
 ---
 
+[![Build Status](https://travis-ci.org/thebioengineer/sandbox.svg?branch=master)](https://travis-ci.org/thebioengineer/sandbox)
+
 This is an example of running your code within a sandbox. write your code as normal, but wrap it within a "sandbox" function. Your code will now be evaluated within its own R session, and outputs will be returned to your console.
 
 ```{r sandbox}
